# MachCtrl-GTK4

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  run-root.sh
packaging/: PKGBUILD  README.md  machctrl-launcher.sh  machctrl.desktop  machctrl.install  machctrld.service
src/: App.jsx  cleaner.rs  gpu.rs  hwmon.rs  i18n.js  main.jsx  main.rs  memory.rs  power.rs  procstat.rs  profiles.rs  style.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cleaner.rs  daemon.rs  fancontrol.rs  gpu.rs  hwmon.rs  main.rs  memory.rs  power.rs  procstat.rs  profiles.rs
