[package]
name = "machctrl"
version = "0.1.0"
description = "Monitor e Otimizador de Hardware para Linux"
authors = ["araujo791"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
